service_c/envoy-config.yaml
static_resources:
  listeners:
    - name: service-c-svc-http-listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8790
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_c
  clusters:
    - name: service_c
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_c
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service_c
                      port_value: 8083
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: "127.0.0.1"
      port_value: 9901
